- Created a UIAlertController Dialog, similar to iOS's version     - Currently only supports title, subtitle, two buttons and a textfield     - With a custom layout file and minor modifications could support anything - Club Leader Edit mode in progress - Created rest of the layouts     - User screen         - Is editable already     - Course editing screen         - Is editable by default         - Automatically loads in the required period data - Made a segmented controller for login (and proud of it! :)

--- a/app/src/main/res/layout/event_layout.xml
+++ b/app/src/main/res/layout/event_layout.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="8dp"
-        android:singleLine="true"
+        android:maxLines="1"
         android:textColor="@color/accentColor"
         android:textSize="@dimen/EVTitleInfoTextSize"
         android:id="@+id/EVTitleLabel"/>
