--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,8 @@
     <dimen name="LIDefaultImageViewSize">44dp</dimen>
     <dimen name="LILargeImageViewSize">92dp</dimen>
 
+    <dimen name="LSLogoImageHeight">150dp</dimen>
+
     <dimen name="APS_description_field_height">297dp</dimen>
     <dimen name="APS_teacher_login_width">233dp</dimen>
 
@@ -33,4 +35,6 @@
     <dimen name="ClubSMemberTextSize">18sp</dimen>
     <dimen name="ClubSButtonTextSize">19sp</dimen>
     <dimen name="ClubSDescriptionHeight">88dp</dimen>
+
+    <dimen name="USTextLabelWidth">210px</dimen>
 </resources>
